--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node 1-main.js",
     "dev":"node 2-main.js",
-    "dev": "node 3-main.js"
+    "dev": "node 3-main.js",
+    "dev": "node 4-main.js"
   },
   "author": "DMMutua",
   "license": "ISC"
