--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -9,7 +9,8 @@
     "dev": "node 1-main.js",
     "dev":"node 2-main.js",
     "dev": "node 3-main.js",
-    "dev": "node 4-main.js"
+    "dev": "node 4-main.js",
+    "dev":"node 5-main.js"
   },
   "author": "DMMutua",
   "license": "ISC"
