--- a/0x01-ES6_promise/package.json
+++ b/0x01-ES6_promise/package.json
@@ -3,17 +3,10 @@
   "version": "1.0.0",
   "description": "Practising concept of JS Promises ",
   "main": "0-main.js",
-  "type":"package",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node 0-main.js",
-    "dev": "node 1-main.js",
-    "dev": "node 2-main.js",
-    "dev": "node 3-main.js",
-    "dev": "node 4-main.js",
-    "dev": "node 5-main.js",
-    "dev": "node 6-main.js",
-    "dev": "node 7-main.js"
+    "dev": "node 0-main.js"
   },
   "author": "DMMutua",
   "license": "ISC"
