--- a/0x03-ES6_data_manipulation/package.json
+++ b/0x03-ES6_data_manipulation/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node 0-main.js"
+    "dev": "node 0-main.js",
+    "dev":"node 1-main.js"
   },
   "author": "DMMutua",
   "license": "ISC"
