--- a/0x03-ES6_data_manipulation/package.json
+++ b/0x03-ES6_data_manipulation/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node 0-main.js",
-    "dev":"node 1-main.js"
+    "dev": "node 1-main.js",
+    "dev": "node 2-main.js"
   },
   "author": "DMMutua",
   "license": "ISC"
