--- a/0x03-ES6_data_manipulation/package.json
+++ b/0x03-ES6_data_manipulation/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node 0-main.js",
     "dev": "node 1-main.js",
-    "dev": "node 2-main.js"
+    "dev": "node 2-main.js",
+    "dev": "node 3-main.js"
   },
   "author": "DMMutua",
   "license": "ISC"
